--- a/source/stylesheets/layout/_footer.scss
+++ b/source/stylesheets/layout/_footer.scss
@@ -20,7 +20,7 @@
 
 	color: palette('white');
 
-	background-color: palette('blue', 'dark');
+	background-color: palette('blue', 'darkness');
 
 	@media screen and (min-width: breakpoint('tablet')) {
 		margin: 0;
