--- a/source/stylesheets/layout/_methodology.scss
+++ b/source/stylesheets/layout/_methodology.scss
@@ -1,3 +1,7 @@
 .methodology {
 	background-color: palette('emerald', 'base');
 }
+
+.methodology h2 {
+	color: palette('blue', 'darkness');
+}
